Fix word spacing

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -22,6 +22,8 @@
 
   --margin: 0.67em auto;
 
+  --word-spacing: 0.2em;
+
   --line-height: 1.612em;
 
   --text-size-adjust: none;
